# fastapi-boilerplate

./: .dockerignore  .editorconfig  .env.example  .env.local  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  docker-compose.local.yaml  docker-compose.production.yaml  docker-compose.yaml  entrypoint.sh  justfile  pyproject.toml
app/: configs.py  main.py
app/api/: v1.py
app/controllers/: geofencing_controller.py
app/middlewares/: cors_middleware.py
app/models/: geofencing_models.py
app/services/: geofencing_services.py
app/utils/: lifespan.py  transformer.py
docs/: DEPLOYMENT.md  LOCAL-DEVELOPMENT.md  SETUP.md
scripts/: build.sh  lint.sh  test.sh
tests/: test_main.py
tests/controllers/: test_geofencing_controller.py
tests/services/: test_geofencing_services.py
